# P1_Minefield_Navigation

./: .gitignore  CMakeLists.txt  map.txt
src/: CMakeLists.txt  function-library.h  general-library.c  general-library.h  projekt_main.c
src/algorithm/: a_star_algorithm.c  a_star_library.h  handling_sets.c  hash_table.c  heap.c  min_heap.c  nearest_neighbor.c  run_algorithm.c  trace_path.c
src/map_creation/: create_file.c  create_map.c
src/map_processing/: parse_map.c  post_process.c  process_library.h  process_map.c  read_map.c
src/post_process/: post_process.c
src/tsp/: nearest_neighbor.c  tsp_library.h
src/tsp_solution/: christofides.c  prim.c
